--- a/style.css
+++ b/style.css
@@ -239,9 +239,9 @@ h1 {
 }
 
 /* Opcional: Cores diferentes para separar visualmente */
-#sobre { background-color: #f9f9f9; }
+#sobre { background-color: #6a5acd; }
 #servicos { background-color: #ffffff; }
-#contato { background-color: #f4f4f4; }
+#contato { background-color: #1c1c1c; }
 
 
 /* Seção Portfolio */
