--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ html {
 
 body {
     font-family: 'Inter', sans-serif;
-    background-color: #fafafa;
+    background-color: #e3dfce;
     /* Efeito de pontos no fundo */
     background-image: radial-gradient(#d1d1d1 1px, transparent 1px);
     background-size: 30px 30px;
