--- a/style.css
+++ b/style.css
@@ -113,8 +113,7 @@ h1 {
 
 body {
     font-family: 'Inter', sans-serif;
-    background-color: #fdfdfb;
-    background-image: radial-gradient(#e0e0e0 1px, transparent 1px);
+    background-color: #b2cdff;
     background-size: 40px 40px;
     color: #333;
 }
