--- a/style.css
+++ b/style.css
@@ -224,9 +224,9 @@ h1 {
 }
 
 /* Opcional: Cores diferentes para separar visualmente */
-#sobre { background-color: #6a5acd; }
-#servicos { background-color: #ffffff; }
-#contato { background-color: #1c1c1c; }
+#sobre { background-color: #48251c; }
+#servicos { background: linear-gradient(to bottom, #b2cdff, #48251c; }
+#contato { background-color: #48251c; }
 
 
 /* Seção Portfolio */
