--- a/style.css
+++ b/style.css
@@ -223,8 +223,9 @@ h1 {
   color: white;
 }
 
-.foto-perfil {
-  width: 10px;           /* Ajuste o tamanho da foto como preferir */
+.foto-perfil img {
+    width: 100%;
+    height: auto;
 }
 
 .texto-sobre {
