--- a/style.css
+++ b/style.css
@@ -217,9 +217,9 @@ h1 {
   display: flex;          /* Ativa o modo de colunas lado a lado */
   align-items: center;    /* Alinha os itens verticalmente ao centro */
   justify-content: center; /* Centraliza o conjunto todo na tela */
-  height: 500px
   gap: 40px;              /* Cria um espaço entre a foto e o texto */
-  padding: 50px;
+  padding: 100px 20px;
+  min-height: 80vh;
   background-color: #48251c;
   color: white;
 }
