--- a/style.css
+++ b/style.css
@@ -219,9 +219,9 @@ h1 {
     flex-direction: row;      /* Garante que fiquem LADO A LADO no PC */
     align-items: center;      /* Alinha verticalmente no centro */
     justify-content: center;  /* Centraliza o conjunto na tela */
-    gap: 40px;                /* Espaço entre a foto e o texto */
+    gap: 175px;                /* Espaço entre a foto e o texto */
     background-color: #4a2c22; 
-    padding: 50px;
+    padding: 150px 20px;
     width: 100%;
     min-height: 400px;        /* Evita que o fundo corte o texto */
 }
