--- a/style.css
+++ b/style.css
@@ -562,12 +562,16 @@ p {
     margin-bottom: 20px; /* Reduz o espaço entre o título e o texto abaixo dele */
     }
 
-.container-tags {
-  display: flex;
-  flex-wrap: wrap; /* Faz as tags irem para baixo se não couberem na linha */
-  gap: 10px;       /* Espaço entre uma tag e outra */
-  margin-top: 20px; /* Espaço entre o título e as tags */
-  justify-content: center;
-  }
+     h2 { 
+    text-align: center;
+    }
+
+    .container-tags {
+     display: flex;
+     flex-wrap: wrap; /* Faz as tags irem para baixo se não couberem na linha */
+     gap: 10px;       /* Espaço entre uma tag e outra */
+     margin-top: 20px; /* Espaço entre o título e as tags */
+     justify-content: center;
+    }
 
 }
